[gd_scene load_steps=5 format=2]

[ext_resource path="res://Modules/Main.gd" type="Script" id=1]
[ext_resource path="res://Modules/Record And Play Audio File/SpellingSoundHBoxContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="SpellingSoundHBoxContainer" parent="." instance=ExtResource( 2 )]
margin_left = 154.0
margin_top = 154.0
margin_right = 503.0
margin_bottom = 218.0

[node name="PlaySaved" type="Button" parent="."]
margin_left = 42.0
margin_top = 44.0
margin_right = 212.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Play Saved Sample"

[node name="SamplePlayer" type="AudioStreamPlayer" parent="."]

[connection signal="recorded_spelling" from="SpellingSoundHBoxContainer" to="." method="_on_SpellingSoundHBoxContainer_recorded_spelling"]
[connection signal="pressed" from="PlaySaved" to="." method="_on_PlaySaved_pressed"]
